--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.0.4",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "^7.0.4",
     "@angular/compiler": "^7.0.4",
     "@angular/core": "^7.0.4",
     "@angular/forms": "^7.0.4",
     "@angular/http": "^7.0.4",
+    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "^7.0.4",
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
