--- a/client/package.json
+++ b/client/package.json
@@ -25,14 +25,17 @@
     "@types/chroma-js": "^1.4.3",
     "chroma-js": "^1.4.1",
     "core-js": "^2.6.10",
+    "jquery": "^3.5.1",
     "rxjs": "~6.3.3",
-    "zone.js": "^0.8.29"
+    "zone.js": "^0.8.29",
+    "--save-dev @types/jquery":"4.9.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.0",
     "@angular/cli": "^7.3.0",
     "@angular/compiler-cli": "^7.0.4",
     "@angular/language-service": "^7.0.4",
+    "@types/jquery": "^3.5.5",
     "@types/node": "~8.9.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
